--- a/media/css/mycelium_elements.css
+++ b/media/css/mycelium_elements.css
@@ -429,6 +429,7 @@ new_object_buttons .new_label {
 .mycelium_btn:hover, input.mycelium_btn:hover {
 	background-color: #0044A8;
 	color: #FFF;	
+	text-decoration: none;
 }
 .mycelium_btn.disabled, .mycelium_btn.disabled:hover {
 	color: #FFF;
@@ -439,6 +440,9 @@ new_object_buttons .new_label {
 .mycelium_small_btn, input.mycelium_small_btn {
 	font-size: 12px;
 	padding: 3px 6px;
+}
+.mycelium_small_btn:hover, input.mycelium_small_btn:hover {
+	text-decoration: none;
 }
 
 .mycelium_gray, .mycelium_grey, input.mycelium_gray, input.mycelium_grey, a.mycelium_gray, a.mycelium_grey {
@@ -474,6 +478,7 @@ new_object_buttons .new_label {
 	color: #284E72;
 	border: 1px solid #d8d8d8;
 	border-width: 0px 1px 0px 0px;
+	text-decoration: none;
 }
 .mycelium_left_arrow_btn:hover {
 	color: #0044A8;
@@ -530,7 +535,7 @@ table.record_table td {
 	padding: 2px;
 }
 .striped .striped_row.even {
-	background-color: #F2F2F2;
+	background-color: #F6F6F6;
 }
 save_status_and_button {
 	position: absolute;
@@ -860,12 +865,6 @@ tab_contents actions {
 }
 .result_row.even {
 	background-color: #F8F8F8;
-}
-.result_row a {
-	text-decoration: none;
-}
-.result_row a:hover {
-	text-decoration: underline;
 }
 .results_table {
 	width: 98%;
