--- a/mycelium/apps/organizations/templates/organizations/_search_result_row_organization.html
+++ b/mycelium/apps/organizations/templates/organizations/_search_result_row_organization.html
@@ -1,6 +1,6 @@
 {% load friendly_data_formatting %}<tr class="result_row person_row striped_row organization_row">
 	<td class="col_0 name">
-		<a href="{% url people:organization obj.pk %}">
+		<a href="{% url organizations:organization obj.pk %}">
 			<icon class="{{obj.contact_type}}" ></icon>
 			<span class="highlightable">{{obj.full_name}}</span>
 		</a>
