--- a/mycelium/templates/mycelium_base.html
+++ b/mycelium/templates/mycelium_base.html
@@ -30,7 +30,7 @@ var GLOBAL_SEARCH_URL = "{% url core:search_results %}";
 		<div class="nav_title"></div>
 		<a href="{% url dashboard:dashboard %}" class="nav_btn dashboard {% if section == "dashboard" %}current{% endif %}">Dashboard</a>
 		<a href="{% url people:search %}" class="nav_btn people {% if not section %}current{% endif %}">People</a>
-		<a href="{% url people:search %}" class="nav_btn organizations {% if section == "organizations" %}current{% endif %}">Organizations</a>
+		<a href="{% url organizations:search %}" class="nav_btn organizations {% if section == "organizations" %}current{% endif %}">Organizations</a>
 		<a href="{% url groups:search %}" class="nav_btn groups {% if section == "groups" %}current{% endif %}">Groups</a>
 		<a href="{% url spreadsheets:search %}" class="nav_btn spreadsheets {% if section == "spreadsheets" %}current{% endif %}">Spreadsheets</a>
 		{# <a href="{% url spreadsheets:search %}" class="nav_btn spreadsheets {% if section == "spreadsheets" %}current{% endif %}">Donations</a> #}
