--- a/media/css/main.css
+++ b/media/css/main.css
@@ -13,7 +13,12 @@
 	font-style: normal;
 
 }
-
+@-moz-document url-prefix(http://) {
+    button::-moz-focus-inner, input[type="button"]::-moz-focus-inner, input[type="submit"]::-moz-focus-inner, input[type="reset"]::-moz-focus-inner {
+	    padding: 0 !important;
+        border: 0 none !important;
+    }
+}
 
 
 html {
