--- a/media/css/marketing_site.css
+++ b/media/css/marketing_site.css
@@ -7,6 +7,7 @@ body {
 body.home_page {
 	background-color: #0a5ab9;
 	background-image: url("../images/marketing-background-stripes-6.jpg");	
+	background-image: url("../images/marketing-background-stripes-7.jpg");		
 	background-repeat: no-repeat;
 	background-position: 50% 0px;
 	position: relative;
@@ -364,6 +365,9 @@ social_links {
 	margin: 0px;
 	padding-top: 366px;
 	width: 100%;
+	background: url("../images/superpowers-text.png");
+	background-position: 50% 70px;
+	background-repeat: no-repeat;
 }
 #home_boxes .home_box {
 	/*display: block;*/
