--- a/mycelium/apps/marketing_site/templates/marketing_site/home.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/home.html
@@ -9,39 +9,74 @@
 {% block page_content %}
 <div id="home_boxes">
 	<div class="container">
-	<div class="row">
-		<div class="fourcol home_box loved_by">
 
-			<div class="title">We &hearts; nonprofits.</div>
-			<div class="description png_bg identical_height_block">
-				We've been staff, volunteers, and donors. We care deeply about your mission, and we're here to help you flourish.
+		<div id="overview_tabs" class="tabs">
+			<div class="overview_tabs_navigation">
+			<ul>
+				<li><a href="#overview" class="overview_tab overview"><div class="name">Overview.</div></a></li>
+				<li><a href="#built_for" class="overview_tab built_for_nonprofits"><div class="name">Built for Small Nonprofits.</div></a></li>
+				<li><a href="#we_love" class="overview_tab loved_by"><div class="name">We &hearts; Nonprofits.</div></a></li>
+				<li><a href="#ready_to_go" class="overview_tab ready_to_go"><div class="name">Ready to Go Today.</div></a></li>
+			</ul>
 			</div>
-			<div class="action"><a href="{% url marketing_site:about_us %}">Learn about our mission!</a></div>
-		</div>
-		<div class="fourcol home_box built_for_nonprofits">
-			<div class="title">Built for Small Nonprofits</div>
-			<div class="description png_bg identical_height_block">
-				GoodCloud was built in collaboration with small nonprofits, so it does the things you actually want.
+			<div class="person_detail" id="overview">
+				<div class="name_and_role">
+					<div class="name">John</div>
+					<div class="role">Financial Advisor</div>
+				</div>
+				<div class="details">
+					<ul>
+						<li>Overview</li>
+					</ul>
+				</div>
 			</div>
-			<div class="action"><a href="{% url marketing_site:features %}">Check out what it can do!</a></div>
-		</div>
-<!--
-		<div class="fourcol home_box loved_by">
-			<div class="title">Loved by Nonprofits</div>
-			<div class="description png_bg identical_height_block">
-				People love using GoodCloud. Small nonprofit staff and volunteers alike rave about how easy it is to use.
+			<div class="person_detail" id="built_for">
+				<div class="name_and_role">
+					<div class="name">Cindy</div>
+					<div class="role">Photographer</div>
+				</div>
+				<div class="details">
+					<ul>
+						<li>Cindy has been trained to work with youth and seniors.</li>
+						<li>She’s a part of the first Tuesdays volunteer group.</li>
+						<li>She’s donated once per year for the last four years.</li>
+						<li>She’s available Tuesdays, Thursdays, and Sundays.</li>
+						<li>She turns 50 on September 28th.</li>
+					</ul>
+				</div>
 			</div>
-			<div class="action"><a href="{% url marketing_site:praise %}">See what they had to say!</a></div>
-		</div>
--->
-		<div class="fourcol home_box ready_to_go">
-			<div class="title">Ready to Go Today</div>
-			<div class="description png_bg identical_height_block">
-				Sign up for a free trial account in less than 60 seconds. No strings, no hassle, no credit card.
+			<div class="person_detail" id="we_love">
+				<div class="name_and_role">
+					<div class="name">Will</div>
+					<div class="role">Waiter</div>
+				</div>
+				<div class="details">
+					<ul>
+						<li>Will has been involved with our organization for two years.</li>
+						<li>He participated in the Spring 2011 and Fall 2011 sessions.</li>
+						<li>Will has been a group leader.</li>
+						<li>Will is interested in the Spring 2012 session.</li>
+						<li>Will made a $30 donation after the Spring 2011 session.</li>
+					</ul>
+				</div>
 			</div>
-			<div class="action"><a href="{% url accounts:signup %}">Try GoodCloud now!</a></div>
+			<div class="person_detail" id="ready_to_go">
+				<div class="name_and_role">
+					<div class="name">Will</div>
+					<div class="role">Waiter</div>
+				</div>
+				<div class="details">
+					<ul>
+						<li>Will has been involved with our organization for two years.</li>
+						<li>He participated in the Spring 2011 and Fall 2011 sessions.</li>
+						<li>Will has been a group leader.</li>
+						<li>Will is interested in the Spring 2012 session.</li>
+						<li>Will made a $30 donation after the Spring 2011 session.</li>
+					</ul>
+				</div>
+			</div>			
 		</div>
-	</div>
+
 	</div>
 </div>
 {% endblock %}
