blog links go to the right page

--- a/mycelium/apps/marketing_site/templates/marketing_site/about_us.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/about_us.html
@@ -62,7 +62,7 @@
 			<div class="title">Co-Founder, Relationship-builder.</div>
 			<div class="contact_info">
 				{# <span class="bio"><a href="#" class="bio_link">Bio</a></span> #}
-				<span class="blog"><a href="{% url blog %}">Blog</a></span>
+				<span class="blog"><a href="http://goodcloud.posterous.com/tag/tom">Blog</a></span>
 				<span class="email"><a href="mailto:tom@agoodcloud.com">Email</a></span>
 				<span class="twitter"><a href="http://www.twitter.com/noble_tom">Twitter</a></span>
 			</div>
@@ -80,7 +80,7 @@
 			<div class="title">Co-Founder, Software-maker.</div>
 			<div class="contact_info">
 				{# <span class="bio"><a href="#" class="bio_link">Bio</a></span> #}
-				<span class="blog"><a href="{% url blog %}">Blog</a></span>
+				<span class="blog"><a href="http://goodcloud.posterous.com/tag/steven">Blog</a></span>
 				<span class="email"><a href="mailto:steven@agoodcloud.com">Email</a></span>
 				<span class="twitter"><a href="http://www.twitter.com/skoczen">Twitter</a></span>
 			</div>
