latest news in dashboard, marketing font tweak

--- a/media/css/marketing_site.css
+++ b/media/css/marketing_site.css
@@ -143,7 +143,7 @@ body.home_page .page_header {
 	display: block;
 	float: left;
 	color: #cee0f1;
-
+	font-family: 'ExpresswayRegular',"Droid Sans", "Lucida Grande","DejaVu Sans","Bitstream Vera Sans",Verdana,Arial,sans-serif;
 }
 #main_nav a.first {
 /*	border-left: 1px solid #EEE;	*/
@@ -368,6 +368,8 @@ social_links {
 	background: url("../images/superpowers-text.png");
 	background-position: 50% 70px;
 	background-repeat: no-repeat;
+	font-family: 'ExpresswayRegular',"Droid Sans", "Lucida Grande","DejaVu Sans","Bitstream Vera Sans",Verdana,Arial,sans-serif;
+	font-size: 15px;
 }
 #home_boxes .home_box {
 	/*display: block;*/
@@ -407,7 +409,7 @@ social_links {
   	-moz-box-shadow:	0px 1px 1px rgba(0,0,0,0.35);
   	-khtml-box-shadow: 	0px 1px 1px rgba(0,0,0,0.35);
   	-webkit-box-shadow: 0px 1px 1px rgba(0,0,0,0.35);
-
+	font-family: 'ExpresswayRegular',"Droid Sans", "Lucida Grande","DejaVu Sans","Bitstream Vera Sans",Verdana,Arial,sans-serif;
 /*	border: #222 1px solid;
     border-width: 0px 0px 1px 0px;
 */
