--- a/mycelium/apps/marketing_site/templates/marketing_site/_footer.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/_footer.html
@@ -3,18 +3,18 @@
 <tr>
 	<td>
 		<a href="{% url marketing_site:about_us %}" class="top_link" >About Us</a>
-		<a href="{% url marketing_site:about_us %}#our_company">Our Company</a>
-		<a href="{% url marketing_site:about_us %}#our_mission">Our Mission</a>
-		<a href="{% url marketing_site:about_us %}#our_team">Our Team</a>
+		<a href="{% url marketing_site:about_us %}#section=our_company">Our Company</a>
+		<a href="{% url marketing_site:about_us %}#section=our_mission">Our Mission</a>
+		<a href="{% url marketing_site:about_us %}#section=our_team">Our Team</a>
 	</td>
 	<td>
 		<a href="{% url marketing_site:features %}" class="top_link" >Features</a>
-		<a href="{% url marketing_site:features %}#everything_in_one_place">Full CRM for Nonprofits</a>
-		<a href="{% url marketing_site:features %}#know_every_person">Know every person</a>
-		<a href="{% url marketing_site:features %}#save_money">Save your money</a>
-		<a href="{% url marketing_site:features %}#save_time">Save your time</a>
-		<a href="{% url marketing_site:features %}#gets_younger">Cloud-based</a>
-		<a href="{% url marketing_site:features %}#secure">Secure</a>
+		<a href="{% url marketing_site:features %}#section=everything_in_one_place">Full CRM for Nonprofits</a>
+		<a href="{% url marketing_site:features %}#section=know_your_people">Know every person</a>
+		<a href="{% url marketing_site:features %}#section=save_money">Save your money</a>
+		<a href="{% url marketing_site:features %}#section=less_computer_time">Save your time</a>
+		<a href="{% url marketing_site:features %}#section=keeps_improving">Cloud-based</a>
+		<a href="{% url marketing_site:features %}#section=secure">Secure</a>
 	</td>
 	<td>
 		<a href="{% url marketing_site:tour %}" class="top_link" >Tour</a>
@@ -23,9 +23,9 @@
 	</td>
 	<td>
 		<a href="{% url marketing_site:legal %}" class="top_link" >Legal</a>
-		<a href="{% url marketing_site:legal %}#user_agreement">User Agreement</a>
-		<a href="{% url marketing_site:legal %}#privacy_policy">Privacy Policy</a>
-		<a href="{% url marketing_site:legal %}#copyright">Copyright</a>
+		<a href="{% url marketing_site:legal %}#section=user_agreement">User Agreement</a>
+		<a href="{% url marketing_site:legal %}#section=privacy_policy">Privacy Policy</a>
+		<a href="{% url marketing_site:legal %}#section=copyright">Copyright</a>
 	</td>
 	<td>
 		<a href="{% url marketing_site:contact_us %}" class="top_link" >Contact Us</a>
