--- a/mycelium/apps/marketing_site/templates/marketing_site/features.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/features.html
@@ -7,13 +7,13 @@
 {% block page_header %}All the things you actually need.{% endblock %}
 
 {% block page_content %}
-<div id="side_nav" class="tabs features">
+<div id="section" class="tabs features">
 	<ul class="nav_links png_bg">
 	 	<li><a href="#everything_in_one_place">Everything in one place</a></li>
 	 	<li><a href="#know_your_people">Know your people</a></li>
 	 	<li><a href="#save_money">Save money</a></li>
 	 	<li><a href="#less_computer_time">Less computer-time</a></li>
-	 	<li><a href="#gets_younger">Keeps getting better</a></li>
+	 	<li><a href="#keeps_improving">Keeps getting better</a></li>
 	 	<li><a href="#secure">Safe and secure</a></li>
  	</ul>
 
@@ -146,7 +146,7 @@
 
 
 	</div>
-	<div class="tab_content company" id="gets_younger">
+	<div class="tab_content company" id="keeps_improving">
 		
 		<div class="page_top_hook">Software that gets better with time - for free.</div>
 
