--- a/mycelium/apps/marketing_site/templates/marketing_site/legal.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/legal.html
@@ -7,7 +7,7 @@
 
 {% block page_content %}
 
-<div id="side_nav" class="tabs legal">
+<div id="section" class="tabs legal">
 	<ul class="nav_links">
 	 	<li><a href="#user_agreement">User Agreement</a></li>
 	 	<li><a href="#privacy_policy">Privacy Policy</a></li>
