--- a/mycelium/apps/marketing_site/templates/marketing_site/pricing.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/pricing.html
@@ -14,7 +14,7 @@
 {% block page_header %}Priced for small nonprofits.{% endblock %}
 
 {% block page_content %}
-<div id="side_nav" class="tabs features">
+<div id="section" class="tabs features">
 	<ul class="nav_links png_bg">
 	 	<li><a href="#price">One simple price</a></li>
 	 	<li><a href="#everything_included">Everything included</a></li>
