--- a/mycelium/apps/marketing_site/templates/marketing_site/tour.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/tour.html
@@ -5,7 +5,7 @@
 {% block page_header %}Watch it in action.{% endblock %}
 
 {% block page_content %}
-<div id="side_nav" class=" features">
+<div id="section" class=" features">
 	<ul class="nav_links png_bg">
 	 	<li class="ui-tabs-selected ui-state-active"><a href="{% url marketing_site:tour %}">Video Tour</a></li>
 	 	<li><a href="{% url marketing_site:screenshots %}">Screenshots</a></li>
