--- a/mycelium/apps/marketing_site/templates/marketing_site/screenshots.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/screenshots.html
@@ -29,7 +29,7 @@ $(function(){
 
 {% block page_content %}
 
-<div id="side_nav" class="features">
+<div id="section" class="features">
 	<ul class="nav_links png_bg">
 	 	</li>
 	 	<li><a href="{% url marketing_site:tour %}">Video Tour</a></li>
