--- a/mycelium/apps/marketing_site/templates/marketing_site/newsletter.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/newsletter.html
@@ -11,17 +11,53 @@
 	 	<li><a href="{% url blog %}">Blog</a></li>
  	</ul>
 
-	<div class="tab_content" id="video_tour">
+	<div class="tab_content newsletter" >
 			<div class="page_top_hook">All the latest news, and a couple great recipes.</div>
-			Subscribe to the GoodCloud Times
 
-			Read past issues:
-
-			Latest Issue - August, 2011
+			<span class="the_good_times">The Good Times</span> is our monthly newsletter with all the latest news in the nonprofit community, features in GoodCloud, often, an amazing recipe. Sign up to recieve it below!
 			
-	</div>
-	</div>	
 
+			<div class="feature">
+				<div class="title">Subscribe to <span class="the_good_times">The Good Times</span></div>
+				<div class="subscription_block">
+				{% if not save_success %}
+					{% if newsletter_subscriber %}
+					<div class="returning_subscriber">
+						Oh! Hey there, {{newsletter_subscriber}}, good to see you again!  <a href="#" class="not_me_link">Not you?</a>
+					</div>
+					{% endif %}
+					<div class="new_subscription {% if newsletter_subscriber %}hidden{% endif %}">
+					<form action="" method="POST">{% csrf_token %}
+					<input type="email" id="id_email" name="email" placeholder="Enter your email..."  />
+					<input type="submit" value="Save Email" class="mycelium_btn" />
+					</form>
+					</div>
+				{% else %}
+
+				<b>Hooray!</b> 
+
+				<p>You're all set - look for a copy of the <span class="the_good_times">The Good Times</span> in your inbox soon!</p> 
+				<p>In the meantime, you can check out the back issues below, or check out <a href="{% url blog %}">our blog</a>.</p>
+				{% endif %}
+				</div>
+			</div>
+
+			<div class="feature">
+				<div class="title">Read back issues of <span class="the_good_times">The Good Times</span></div>
+			
+				<a href="#" class="issue">
+					<div class="cover_image"><img src="{% media_url "images/newsletters/2011-08/burger-crop.jpg"%}" /></div> 
+					<div class="title_and_date">
+						{# <span class="issue_title">The Good Times</span> #}
+						<span class="date">August 2011</span>
+					</div>
+					<div class="overview">This month, <span class="the_good_times">The Good Times</span> looks at how to keep institutional knowledge in the face of staff turnover, the latest trends in social media and how they affect non-profits, and a great recipe for burgers (veggie or otherwise)!</div>
+				</a>
+				
+			</div>
+
+	</div>	
+</div>
 
 
 {% endblock %}
