--- a/mycelium/apps/marketing_site/templates/marketing_site/newsletter.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/newsletter.html
@@ -45,7 +45,7 @@
 			<div class="feature">
 				<div class="title">Read back issues of <span class="the_good_times">The Good Times</span></div>
 			
-				<a href="#" class="issue">
+				<a href="{% url marketing_site:newsletter_issue 2011 8 %}" class="issue">
 					<div class="cover_image"><img src="{% media_url "images/newsletters/2011-08/burger-crop.jpg"%}" /></div> 
 					<div class="title_and_date">
 						{# <span class="issue_title">The Good Times</span> #}
@@ -53,7 +53,7 @@
 					</div>
 					<div class="overview">This month, <span class="the_good_times">The Good Times</span> looks at how to keep institutional knowledge in the face of staff turnover, the latest trends in social media and how they affect non-profits, and a great recipe for burgers (veggie or otherwise)!</div>
 				</a>
-				
+
 			</div>
 
 	</div>	
