--- a/media/css/newsletter.css
+++ b/media/css/newsletter.css
@@ -12,56 +12,89 @@
 }
 .newsletter_sidebar {
 	float: right;
-	width: 20%;
+	width: 19%;
+	margin-right: 0px;
+
+}
+
+.newsletter_issue {
+	width: 100%;	
+}
+
+.newsletter_issue .headliner_article, .newsletter_issue .newsletter_columns {
+	width: 84%;
+	padding: 0px 8% 20px 8%;
+	overflow: auto;
+}
+.newsletter_issue .column_1 {
+	float: left;
+	width: 50%;
+	display: block;
+}
+.newsletter_issue .article_teaser {
+	/*text-align: justify;*/
+}
+.newsletter_issue .article_teaser a {
+	
+}
+.newsletter_issue .column_2 {
+	width: 40%;
+	margin-left: 60%;
 }
 .newsletter_nav {
 	display: block;
 	position: absolute;
 	top: 30px;
 	height: 30px;
-	padding: 100px 10px 0px 10px;
+	padding: 92px 0px 0px 0px;
 	width: 75%;
 }
-.newsletter_issue {
-	width: 100%;	
-}
-.newsletter_issue .headliner_article {
-	width: 90%;
-	margin: 0px 5%;
-}
-.newsletter_issue .newsletter_columns {
-	width: 90%;
-	padding: 0px 5% 30px 5%;
-	overflow: auto;
-}
-.newsletter_issue .column_1 {
-	float: left;
-	width: 55%;
-	display: block;
-}
-
-.newsletter_issue .column_2 {
-	width: 40%;
-	margin-left: 60%;
-}
-
-.newsletter_nav .previous_issue {
+.newsletter_nav .issue_nav_link a {
+	background-repeat: none;
+	background-position: right 0px;
+	height: 26px;
+	
+	color: #FFF;
+	font-size: 14px;
+	font-family: 'Droid Serif', Georgia, "Times New Roman", serif;
+	text-shadow:		 1px 1px 1px rgba(0,0,0,0.15);
+	-moz-text-shadow:    1px 1px 1px rgba(0,0,0,0.15);
+	-webkit-text-shadow: 1px 1px 1px rgba(0,0,0,0.15);	
+	
 	position: absolute;
-	left: 20px;
-	width: 15%;
-	text-align: left;
+	white-space: nowrap;
 }
-.newsletter_nav .next_issue {
-	float: right;
-	margin-right: 20px;
-	width: 15%;
+.newsletter_nav .issue_nav_link a:hover {
+	color: #FFF;
+	text-decoration: none;
+}
+.newsletter_nav .previous_issue a {
+	left: -1px;
+	text-align: left;
+	background-image: url("../images/ribbon-grey-left.png");
+	background-position: right 0px;
+	padding: 5px 35px 0px 10px;
+}
+.newsletter_nav .previous_issue a.active {
+	background-image: url("../images/ribbon-blue-left.png");
+}
+.newsletter_nav .next_issue a {
+	right: 0px;
+	margin-right: -1px;
+	padding: 5px 10px 0px 30px;	
 	text-align: right;
+	background-image: url("../images/ribbon-grey-right.png");
+	background-position: left 0px;
+}
+.newsletter_nav .next_issue a.active {
+	background-image: url("../images/ribbon-blue-right.png");
 }
 .current_issue {
 	width: 100%;
 	text-align: center;
-	font-size: 20px;
+	font-size: 24px;
 	color: #888;
+	padding-top: 0px;
 	padding-bottom: 20px;
 }
 .newsletter_body .newsletter_title {
@@ -80,4 +113,32 @@
 }
 .newsletter_body p {
 	margin-bottom: 1em;
+}
+.article_teaser_image {
+	float: left;
+	margin: 2px 10px 10px 0px;
+}
+.headliner_teaser_image {
+	float: right;
+	margin: 2px 0px 10px 10px;
+}
+.subscription_block {
+	padding: 5px;
+}
+#id_email {
+	border: 1px solid #CCC;	
+	border-radius: 		4px;
+	-moz-border-radius: 4px;
+	width: 90%;
+	font-size: 15px;
+}
+.newsletter_sidebar .not_me_link {
+	display: block;
+	font-size: 15px;
+	margin: 10px 0px 0px 0px;
+}
+.newsletter_sidebar #id_submit {
+	margin-top: 5px;
+	font-size: 14px;
+	padding: 5px 7px;
 }
